Almost finished the work on the ranges, need to load the names of the ranges into the rangeList in the leftComponent. next: Sorting feature.